<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:id="@+id/content_prog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvHeure"
            android:gravity="center"
            android:paddingBottom="@dimen/progPadding"
            android:paddingTop="@dimen/progPadding"
            android:textColor="#fff"
            android:textSize="@dimen/progSize"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/dynamicContent"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="120dp"
            android:layout_below="@id/tvHeure"
            android:gravity="center"  >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tvDate"
                android:gravity="center"
                android:paddingBottom="@dimen/progPadding"
                android:textColor="#fff"
                android:textSize="@dimen/progSize"
                android:background="@color/colorAccent" />

            <RelativeLayout
                android:id="@+id/hiddenRepeat"
                android:layout_width="214dp"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <CheckBox
                    android:id="@+id/samedi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/samedi"
                    android:layout_below="@+id/vendredi"
                    android:layout_alignLeft="@+id/vendredi"
                    android:layout_alignStart="@+id/vendredi" />

                <CheckBox
                    android:id="@+id/mercredi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mercredi"
                    android:layout_below="@+id/mardi"
                    android:layout_alignLeft="@+id/mardi"
                    android:layout_alignStart="@+id/mardi" />

                <CheckBox
                    android:id="@+id/mardi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mardi"
                    android:layout_below="@+id/lundi"
                    android:layout_toLeftOf="@+id/vendredi"
                    android:layout_toStartOf="@+id/vendredi"
                    android:layout_marginRight="40dp"
                    android:layout_marginEnd="40dp" />

                <CheckBox
                    android:id="@+id/lundi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lundi"
                    android:layout_alignParentTop="true"
                    android:layout_alignLeft="@+id/mardi"
                    android:layout_alignStart="@+id/mardi" />

                <CheckBox
                    android:id="@+id/vendredi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vendredi"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_below="@+id/jeudi"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <CheckBox
                    android:id="@+id/jeudi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jeudi"
                    android:layout_alignParentTop="true"
                    android:layout_alignLeft="@+id/vendredi"
                    android:layout_alignStart="@+id/vendredi" />

                <CheckBox
                    android:id="@+id/dimanche"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dimanche"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>

        </LinearLayout>


        <CheckBox
            android:id="@+id/checkProg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dynamicContent"
            android:text="@string/prog_repeat" />

        <Button
            android:id="@+id/set_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnProg"
            android:layout_below="@id/checkProg"
            android:layout_centerHorizontal="true" />

        <ListView
            android:id="@+id/listeProg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/set_button">

        </ListView>

    </RelativeLayout>
</ScrollView>